--- a/AtomScript/AtomScript.csproj
+++ b/AtomScript/AtomScript.csproj
@@ -4,7 +4,11 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <ApplicationIcon />
-    <StartupObject>AtomScript.AtomVM</StartupObject>
+    <StartupObject></StartupObject>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Folder Include="Optimizer\" />
+  </ItemGroup>
 
 </Project>
